syntax = "proto3";

package persistence_sdk.modules.splits.internal.queries.ownable;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/splits/internal/queries/ownable";

service Ownable {
  rpc Ownable(QueryRequest) returns (QueryResponse) {
    option (google.api.http).get = "/persistenceSDK/splits/ownable";
  };
}

message QueryRequest {
  string ownable_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field OwnableID missing"'];
}

message QueryResponse {
  bool success = 1;
  string error = 2 [(gogoproto.moretags) = 'swaggertype:"string"'];
  string value = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.moretags) = 'swaggertype:"string"'];
}